[package]
name = "easy_rent_sdk"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1"
tonic = "0.4"
prost = "0.7"
anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
thiserror = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "offline", "runtime-tokio-rustls"]

[build-dependencies]
tonic-build = "0.4"
prost-build = "0.7"
