[package]
name = "easy_rent_sdk"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1"
anyhow = "1"
tonic = "0.4"
prost = "0.7"
chrono = "0.4"
dotenv = "0.15"
thiserror = "1"
dirs-next = "2"
serde_json = "1"

[dependencies.tracing]
version = "0.2"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.tracing-appender]
version = "0.2"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.tracing-subscriber]
version = "0.3"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "offline", "runtime-tokio-rustls"]

[build-dependencies]
tonic-build = "0.4"

[profile.release]
lto = true
codegen-units = 1
